<resources>
    <string name="app_name">GaMi</string>
    <string name="app_feature">Tụi mình có bán đồ ăn cho chó mèo, không bán chó mèo!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_feature1">Tụi mình còn có đa dạng sản phẩm phục vụ các nhu cầu khác nhau</string>
    <string name="Register">TẠO TÀI KHOẢN</string>
    <string name="name">Tên</string>
    <string name="email">Email</string>
    <string name="acc_already">Đã có tài khoản?</string>
    <string name="log">
        <u>Đăng nhập</u></string>
    <string name="logn">ĐĂNG NHẬP</string>
    <string name="forgotpass">
        <u>Quên mật khẩu</u></string>
    <string name="description">Nhập email của bạn bên dưới để thực hiện xác nhận, chúng tôi sẽ gửi mã xác nhận qua email của bạn.</string>
    <string name="cont">TIẾP TỤC</string>
    <string name="verify">Nhập mã xác nhận mà bạn được gửi qua email.</string>
    <string name="reset_pass">Đặt lại mật khẩu</string>
    <string name="description_reset">Đặt lại mật khẩu mới cho tài khoản của bạn để bạn có thể đăng nhập và trải nghiệm các chức năng.</string>
    <string name="mk">Mật khẩu</string>
    <string name="retype_pass">Nhập lại mật khẩu</string>
    <string name="remember">Ghi nhớ cho lần đăng nhập sau</string>
    <string name="congrats">Chúc mừng</string>
    <string name="success">Bạn đã tạo tài khoản thành công</string>
    <string name="start">Giờ thì bạn đã có thể bắt đầu trải nghiệm rồi</string>
    <string name="setting">Cài đặt</string>
    <string name="logout">ĐĂNG XUẤT</string>
    <string name="keyword">Nhập từ khóa...</string>
    <string name="sp1">Làm sao để mua hàng/ Đặt hàng trên ứng dụng GaMi?</string>
    <string name="sp2">Quy trình trả hàng hoàn tiền của GaMi</string>
    <string name="sp3">Cách theo dõi tình trạng vận chuyển của đơn hàng</string>
    <string name="sp4">Hướng dẫn sử dụng mã miễn phí vận chuyển</string>
    <string name="sp5">Tôi có thể hủy đơn hàng không?</string>
    <string name="sp6">Tại sao tài khoản GaMi của tôi bị khóa/ bị giới hạn?</string>


    <string name="facebook_app_id">599472041314938</string>
    <string name="fb_login_protocol_scheme">fb599472041314938</string>
    <string name="gami">GAMI</string>
    <string name="chitietbaiviet1">Mũ là 1 item không thể thiếu cho các Boss mỗi khi đông về. Ngoài tác dụng giữ ấm thì 1 chiếc mũ thật cute sẽ giúp bé cưng của bạn trở nên đáng yêu hơn rất nhiều.</string>
    <string name="payment">Thanh toán</string>
    <string name="rate_des">Mỗi đánh giá của bạn là 1 viên gạch giúp ngôi nhà GaMi tối hơn.</string>
    <string name="rate_us">Đánh giá GaMi tụi mình</string>
    <string name="cart">Giỏ hàng</string>
    <string name="bill">Tổng thanh toán</string>
    <string name="dangky"><u>Đăng ký nếu chưa có tài khoản</u></string>
    
    <string-array name="gioitinh">
        <item>Nam</item>
        <item>Nữ</item>
        <item>Khác</item>
    </string-array>

</resources>