<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="459dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/forgot_pass"
    android:padding="35dp">
    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_pass"
        android:textColor="@color/gami3"
        android:textSize="24sp"
        android:textStyle="bold"


        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/txtDes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description_reset"
        android:textColor="@color/gami4"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/txtPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mk"
        android:textColor="@color/gami3"

        android:layout_marginTop="20dp"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/txtDes"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_textinput"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/gami4"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        app:hintEnabled="false"
        app:layout_constraintTop_toBottomOf="@+id/txtPass"
        app:layout_constraintStart_toStartOf="parent"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtMk"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/fill_in"
            android:inputType="textPassword"
            android:textColor="@color/gami4"
            android:textSize="15sp"
            android:paddingTop="8dp"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/txtRePass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/retype_pass"
        android:textColor="@color/gami3"
        android:layout_marginTop="20dp"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/layout_textinput"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_remk"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/gami4"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        app:hintEnabled="false"
        app:layout_constraintTop_toBottomOf="@+id/txtRePass"
        app:layout_constraintStart_toStartOf="parent">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtReMk"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/fill_in"
            android:inputType="textPassword"
            android:textColor="@color/gami4"
            android:textSize="15sp"
            android:paddingTop="8dp"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <FrameLayout
        android:id="@+id/btnReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/regis_button"
        android:layout_marginTop="42dp"
        android:elevation="8dp"
        app:layout_constraintTop_toBottomOf="@id/layout_remk"
        app:layout_constraintStart_toStartOf="parent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="ĐẶT LẠI MẬT KHẨU"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_gravity="center"/>
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>