<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="340dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/forgot_pass"
    android:padding="35dp">
    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Quên mật khẩu"
        android:textColor="@color/gami3"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:fontFamily="@font/sourcesanspro_regular"/>
    <TextView
        android:id="@+id/txtDes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textColor="@color/gami4"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle"
        app:layout_constraintStart_toStartOf="parent"
        android:fontFamily="@font/sourcesanspro_regular"/>
    <TextView
        android:id="@+id/txtEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textColor="@color/gami3"
        android:layout_marginTop="10dp"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/txtDes"
        app:layout_constraintStart_toStartOf="parent"
        android:fontFamily="@font/sourcesanspro_regular"/>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_email"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        app:hintEnabled="false"
        app:layout_constraintTop_toBottomOf="@+id/txtEmail"
        app:layout_constraintStart_toStartOf="parent">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtEmailVerify"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/fill_in"
            android:inputType="textEmailAddress"
            android:textColor="@color/gami4"
            android:textSize="15sp"
            android:paddingTop="8dp"/>
    </com.google.android.material.textfield.TextInputLayout>
    <FrameLayout
        android:id="@+id/btnContinue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/regis_button"

        android:layout_marginTop="30dp"
        android:elevation="8dp"
        app:layout_constraintTop_toBottomOf="@+id/layout_email"
        app:layout_constraintStart_toStartOf="parent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cont"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:fontFamily="@font/sourcesanspro_regular"/>
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>