<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@color/kem">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imvBack"
            android:layout_width="7dp"
            android:layout_height="14dp"
            android:src="@drawable/back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginLeft="30dp"/>

        <TextView
            android:id="@+id/txtHeaderRegis"
            android:layout_width="150dp"
            android:layout_height="33dp"
            android:gravity="center"
            android:text="@string/logn"
            android:textColor="@color/gami3"
            android:textSize="26sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <LinearLayout
        android:id="@+id/LinearLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header">

        <TextView
            android:id="@+id/txtName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:layout_marginLeft="10dp"
            android:textColor="@color/gami3"
            android:textSize="14sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edtEmail"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            android:layout_width="335dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            app:hintEnabled="false">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/fill_in"
                android:inputType="textEmailAddress"
                android:textColor="@color/gami4"
                android:textSize="15sp"
                android:paddingTop="8dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/txtEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/mk"
            android:layout_marginLeft="10dp"
            android:textColor="@color/gami3"
            android:textSize="14dp" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edtPass"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/gami4"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            android:layout_width="335dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            app:hintEnabled="false"
            >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtMk"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/fill_in"
            android:inputType="textPassword"
            android:textColor="@color/gami4"
            android:textSize="15sp"
            android:paddingTop="8dp"
            app:hintTextAppearance="@style/TextAppearance.AppCompat.Body1"
            />
        </com.google.android.material.textfield.TextInputLayout>

<!--        <EditText-->
<!--            android:layout_width="335dp"-->
<!--            android:layout_height="40dp"-->
<!--            android:layout_gravity="center"-->
<!--            android:layout_marginTop="10dp"-->
<!--            android:background="@drawable/fill_in"-->
<!--            android:textColor="@color/gami4"-->
<!--            android:drawableRight="@drawable/eye"-->
<!--            android:padding="20dp"-->
<!--            android:drawablePadding="20dp"-->
<!--            app:passwordToggleEnabled="true"/>-->
        <CheckBox
            android:id="@+id/chkRemember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/remember"
            android:textColor="#4A000000"
            android:layout_marginLeft="10dp"
            android:textSize="11sp"
            />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/LinearSocial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/LinearLogin"
        android:layout_marginTop="13dp">
        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_gg"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginLeft="128dp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="128dp"
            android:src="@drawable/ic_fb"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/txtForgotPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgotpass"
        android:textColor="#4A000000"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LinearSocial"
        android:layout_marginTop="20dp"/>

    <FrameLayout
        android:id="@+id/btnLogin"
        android:layout_width="342dp"
        android:layout_height="44dp"
        android:layout_below="@+id/LinearSocial"
        android:layout_centerHorizontal="true"
        android:background="@drawable/regis_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtForgotPass"
        android:layout_marginTop="20dp"
        android:elevation="25dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/logn"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />
    </FrameLayout>

    <ImageView
        android:id="@+id/imvPaw2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/paw2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="203dp"/>

    <ImageView
        android:id="@+id/imvPaw1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/imvPaw2"
        android:src="@drawable/paw1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="490dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>